--- a/src/components/carinfo/CarInfo.css
+++ b/src/components/carinfo/CarInfo.css
@@ -30,6 +30,7 @@
     /*border: 2px solid black;*/
     /*border-radius: 20px;*/
     padding: 15px;
+    width: 110px;
 }
 
 .info-item {
@@ -40,8 +41,10 @@
 }
 
 .info-item-middle {
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+    border-top: 2px solid lightgray;
+    border-bottom: 2px solid lightgray;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .location-item {
