--- a/src/components/parkingpage/button/Button.css
+++ b/src/components/parkingpage/button/Button.css
@@ -1,6 +1,7 @@
 .park-button {
     width: 150px;
     background-color: rgba(37, 226, 237, 0.7);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     border: none; /* Remove border */
     color: black; /* White text color */
     font-weight: bold; /* Make the button text bold */
@@ -18,10 +19,15 @@
 
 .park-button:hover {
     background-color: rgba(37, 226, 237, 1);
+    box-shadow: none;
+    transform: translate(5px, 5px);
+
 }
 
-.park-button:disabled {
+.park-button:disabled, .park-button:disabled:hover {
     opacity: 0.5;
     background-color: #7AEEF5; /* Change background color to gray */
     cursor: default; /* Change cursor to default */
+    box-shadow: none;
+    transform: translate(5px, 5px);
 }
