feat: '내 주변 주차장 보기' 버튼 추가

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
     background-color: white;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
@@ -52,9 +53,26 @@
     align-items: center;
 }
 
+.single-button-layout {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 150px;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    background-color: white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
 
 .button-style {
-    background-color: rgba(37, 226, 237, 0.7);
+    /*TODO: 둘 중 선택*/
+    /*background-color: rgba(37, 226, 237, 0.7);*/
+    background-color: ghostwhite;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
     border: none; /* Remove border */
     color: black; /* White text color */
@@ -88,9 +106,14 @@
     margin-left: 47px;
 }
 
+.map-button {
+    width: 400px;
+}
+
 .button-style:hover {
-    background-color: rgba(37, 226, 237, 1);
+    /*TODO: 둘 중 선택*/
+    /*background-color: rgba(37, 226, 237, 1);*/
+    background-color: lightgray;
     box-shadow: none;
     transform: translate(3px, 3px);
-
 }
