feat: App 클래스 스타일 변경

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 .App {
+    /*추가 시작*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 560px;
+    margin: 0 auto;
+     /*추가 끝*/
     height: 100vh;
     text-align: center;
-    padding: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     background-color: lightgray;
 }
 
