--- a/src/components/mappage/map/Map.css
+++ b/src/components/mappage/map/Map.css
@@ -17,3 +17,40 @@
     width: 90%;
     height: 90%;
 }
+
+.custom-overlay {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.overlay-title {
+    margin-bottom: 5px;
+    font-size: 16px;
+    color: #333;
+}
+
+.overlay-description {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #555;
+}
+
+.overlay-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.overlay-button:hover {
+    background-color: #0056b3;
+}
