feat: 커스텀 오버레이의 주차 버튼 클릭 시 입차 페이지로 이동하도록 수정

--- a/src/components/mappage/map/Map.css
+++ b/src/components/mappage/map/Map.css
@@ -36,9 +36,9 @@
 }
 
 .overlay-description {
+    color: red;
     margin-bottom: 10px;
     font-size: 14px;
-    color: #555;
 }
 
 .overlay-button {
